devise views generated

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,7 +11,7 @@
     = stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
 
   %body
-    %p.notice= notice
-    %p.alert= alert
+    = render "layouts/messages"
     = render "layouts/header"
-    = yield
+    .container
+      = yield
