--- a/app/views/users/_user.html.haml
+++ b/app/views/users/_user.html.haml
@@ -12,7 +12,8 @@
   \:
 = user.sign_in_count
 %br/
-%b= 'current_sign_in_at'.humanize
+%b
+  = 'current_sign_in_at'.humanize
   \:
 = user.current_sign_in_at
 %br/
@@ -30,3 +31,10 @@
   = 'last_sign_in_ip'.humanize
   \:
 = user.last_sign_in_ip
+%br/
+%b
+  = 'locked_at'.humanize
+  \:
+= user.locked_at
+%br/
+= link_to "Delete", user, method: :delete, data: {confirm: "Are you sure"}
