--- a/app/views/users/_user.html.haml
+++ b/app/views/users/_user.html.haml
@@ -37,4 +37,6 @@
   \:
 = user.locked_at
 %br/
+= link_to ban_status(user), ban_user_path(user), method: :patch
+%br/
 = link_to "Delete", user, method: :delete, data: {confirm: "Are you sure"}
