--- a/app/views/users/_user.html.haml
+++ b/app/views/users/_user.html.haml
@@ -37,6 +37,27 @@
   \:
 = user.locked_at
 %br/
+%b
+  = 'provider'.humanize
+  \:
+= user.provider
+%br/
+%b
+  = 'uid'.humanize
+  \:
+= user.uid
+%br/
+%b
+  = 'name'.humanize
+  \:
+= user.name
+%br/
+%b
+  = 'image'.humanize
+  \:
+- if user.image.present?
+  = image_tag user.image, size: "50x50"
+%br/
 = link_to ban_status(user), ban_user_path(user), method: :patch
 %br/
 = link_to "Delete", user, method: :delete, data: {confirm: "Are you sure"}
