user layout styles

--- a/app/views/users/_user.html.haml
+++ b/app/views/users/_user.html.haml
@@ -62,8 +62,9 @@
 \:
 = user.active_roles.join(", ")
 %br/
-= link_to "Edit roles", edit_user_path(user)
-%br/
-= link_to ban_status(user), ban_user_path(user), method: :patch
-%br/
-= link_to "Delete", user, method: :delete, data: {confirm: "Are you sure"}
+- if current_user.admin?
+  = link_to "Edit roles", edit_user_path(user), class: "btn btn-sm btn-warning"
+  %br/
+  = link_to ban_status(user), ban_user_path(user), method: :patch, class: "btn btn-sm btn-danger"
+  %br/
+  = link_to "Delete", user, method: :delete, data: {confirm: "Are you sure"}, class: "btn btn-sm btn-danger"
