--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -16,3 +16,9 @@
     .container
       %br
       = yield
+  %footer.bg-dark.text-light
+    .container
+      Footer content
+      %p
+      = link_to "Privacy Policy", privacy_policy_path
+      %p
