--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,4 +1,4 @@
-%nav.navbar.navbar-expand-lg.navbar-light.bg-light
+%nav.navbar.navbar-expand-lg.navbar-dark.bg-dark
   %a.navbar-brand{href: "/"}
     %i.fas.fa-flag
     Brand
@@ -9,9 +9,10 @@
       = link_to root_path, class: "nav-link #{'active font-weight-bold' if current_page?(root_path)}" do
         .fa.fa-home
         Home
-      = link_to users_path, class: "nav-link #{'active font-weight-bold' if current_page?(users_path)}" do
-        .fa.fa-users
-        Users
+      - if current_user
+        = link_to users_path, class: "nav-link #{'active font-weight-bold' if current_page?(users_path)}" do
+          .fa.fa-users
+          Users
     %ul.navbar-nav.mr-right
       - if current_user
         %li.nav-item.dropdown
