--- a/app/views/users/_user.html.haml
+++ b/app/views/users/_user.html.haml
@@ -1,32 +1,91 @@
-%h2
-  Users:
-  = @users.size
-.table-responsive
-  %table.table.table-striped.table-hover.table-sm
-    %thead
-      %tr
-        %th Id
-        %th Email
-        %th Confirmed
-        %th Banned?
-        %th Name
-        %th Image
-        %th Roles
-        %th{colspan: "3"}
-    %tbody
-      - @users.each do |user|
-        %tr
-          %td= link_to user.id, user_path(user)
-          %td= user
-          %td= user.confirmed?
-          %td= user.access_locked?
-          %td= user.name
-          %td
-            - if user.image.present?
-              = image_tag user.image, size: "20x20"
-          %td= user.active_roles.join(", ")
-          %td
-            - if current_user.admin?
-              = link_to "Edit roles", edit_user_path(user), class: "btn btn-sm btn-warning"
-              = link_to ban_status(user), ban_user_path(user), method: :patch, class: "btn btn-sm btn-danger"
-              = link_to "Delete", user, method: :delete, data: {confirm: "Are you sure"}, class: "btn btn-sm btn-danger"
+.card.shadow
+  .card-header
+    -# - if @user.invited_by == current_user
+      - if @user.created_by_invite? && @user.invitation_accepted? == false && @user.confirmed? == false
+        = link_to "Resend invitation", resend_invitation_user_path(@user), method: :patch, class: "btn btn-sm btn-secondary"
+    - if @user.confirmed? == false && @user.created_by_invite? == false
+      = link_to "Resend confirmation instructions", resend_confirmation_instructions_user_path(@user), method: :patch, class: "btn btn-sm btn-secondary"
+    = link_to "Edit", edit_user_path(@user), class: "btn btn-sm btn-warning"
+    = link_to ban_status(@user), ban_user_path(@user), method: :patch, class: "btn btn-sm btn-danger"
+    = link_to "Delete", @user, method: :delete, data: {confirm: "Are you sure"}, class: "btn btn-sm btn-danger"
+  .card-body
+    %b Id:
+    = link_to @user.id, user_path(@user)
+    %br/
+    %b Email:
+    = @user.email
+    %br/
+    %b Confirmed?
+    = boolean_label(@user.confirmed?)
+    %br/
+    %b Banned?
+    = boolean_label(@user.access_locked?)
+    %br/
+    %b Created by invite?
+    -# = boolean_label(@user.created_by_invite?)
+    %br/
+    %b Invitation accepted?
+    -# = boolean_label(@user.invitation_accepted?)
+    %br/
+    %b
+      = 'sign_in_count'.humanize
+      \:
+    = @user.sign_in_count
+    %br/
+    %b
+      = 'current_sign_in_at'.humanize
+      \:
+    = @user.current_sign_in_at
+    %br/
+    %b
+      = 'last_sign_in_at'.humanize
+      \:
+    = @user.last_sign_in_at
+    %br/
+    %b
+      = 'current_sign_in_ip'.humanize
+      \:
+    = @user.current_sign_in_ip
+    %br/
+    %b
+      = 'last_sign_in_ip'.humanize
+      \:
+    = @user.last_sign_in_ip
+    %br/
+    %b
+      = 'locked_at'.humanize
+      \:
+    = @user.locked_at
+    %br/
+    %b
+      = 'invited_by'.humanize
+      \:
+    -# = @user.invited_by
+    %br/
+    %b
+      = 'provider'.humanize
+      \:
+    = @user.provider
+    %br/
+    %b
+      = 'uid'.humanize
+      \:
+    = @user.uid
+    %br/
+    %b
+      = 'name'.humanize
+      \:
+    = @user.name
+    %br/
+    %b
+      = 'image'.humanize
+      \:
+    - if @user.image.present?
+      = image_tag @user.image, size: "50x50"
+    %br/
+    %b
+      = 'roles'.humanize
+      \:
+    = @user.active_roles.join(", ")
+  .card-footer
+    = link_to "All users", users_path, class: "btn btn-sm btn-secondary"
