--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,5 +1,46 @@
-All users:
-= @users.size
-- @users.each do |user|
-  %hr/
-  = render 'users/user', user: user
+%h3
+  .text-center
+    Users:
+    .badge.badge-info
+      = @users.count
+    -# = link_to new_user_invitation_path, class: "btn btn-primary" do
+      .fa.fa-plus
+      .fa.fa-user
+      Invite User
+.table-responsive
+  %table.table.table-striped.table-bordered.table-hover.table-sm.table-light.shadow
+    %thead
+      %tr
+        %th Id
+        %th Email
+        %th Name
+        %th Image
+        %th Roles
+        %th Confirmed?
+        %th Banned?
+        %th Created by invite?
+        %th Invitation accepted?
+        %th{colspan: "3"} Actions
+    %tbody
+      - @users.each do |user|
+        %tr
+          %td= link_to user.id, user_path(user)
+          %td= user
+          %td= user.name
+          %td
+            - if user.image.present?
+              = image_tag user.image, size: "20x20"
+          %td= user.active_roles.join(", ")
+          %td= boolean_label(user.confirmed?)
+          %td= boolean_label(user.access_locked?)
+          -# %td= boolean_label(user.created_by_invite?)
+          -# %td= boolean_label(user.invitation_accepted?)
+          %td
+            -# - if user.invited_by == current_user
+              - if user.created_by_invite? && user.invitation_accepted? == false && user.confirmed? == false
+                = link_to "Resend invitation", resend_invitation_user_path(user), method: :patch, class: "btn btn-sm btn-secondary"
+            -# - if user.confirmed? == false && user.created_by_invite? == false
+              = link_to "Resend confirmation", resend_confirmation_instructions_user_path(user), method: :patch, class: "btn btn-sm btn-secondary"
+            = link_to "Edit", edit_user_path(user), class: "btn btn-sm btn-warning"
+            = link_to ban_status(user), ban_user_path(user), method: :patch, class: "btn btn-sm btn-danger"
+            = link_to "Delete", user, method: :delete, data: {confirm: "Are you sure"}, class: "btn btn-sm btn-danger"
