--- a/app/views/static_pages/landing_page.html.haml
+++ b/app/views/static_pages/landing_page.html.haml
@@ -1,10 +1,6 @@
-.container-fluid
+.text-center
   %h1
     Ruby on Rails 6 User Management app
-  = link_to "Privacy Policy", privacy_policy_path, class: "btn btn-lg btn-warning"
-  = link_to privacy_policy_path, class: "btn btn-lg btn-warning" do
-    %i.fas.fa-file-word
-    Privacy Policy
 .text-center
   %h2 Core features
   .row
