--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,17 +13,19 @@
  *= require_tree .
  *= require_self
  */
+ 
+ .bg-bodylight { background-color: #f8f0e6; }
 
-html {
-   margin: 0;
-}
+ html {
+     margin: 0;
+ }
 
-body {
-   display: flex;
-   flex-direction: column;
-   min-height: 100vh;
-}
+ body {
+     display: flex;
+     flex-direction: column;
+     min-height: 100vh;
+ }
 
-footer {
-   margin-top: auto;
-}
+ footer {
+     margin-top: auto;
+ }
