--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,3 +1,76 @@
-= render 'users/user', user: @user
-%br/
-= link_to "All Users", users_path
+.card
+  .card-header
+    - if current_user.admin?
+      = link_to "Edit roles", edit_user_path(@user), class: "btn btn-sm btn-warning"
+      = link_to ban_status(@user), ban_user_path(@user), method: :patch, class: "btn btn-sm btn-danger"
+      = link_to "Delete", @user, method: :delete, data: {confirm: "Are you sure"}, class: "btn btn-sm btn-danger"
+  .card-body
+    %b Id:
+    = link_to @user.id, user_path(@user)
+    %br/
+    %b Email:
+    = @user.email
+    %br/
+    %b Confirmed?
+    = boolean_label(@user.confirmed?)
+    %br/
+    %b Banned?
+    = boolean_label(@user.access_locked?)
+    %br/
+    %b
+      = 'sign_in_count'.humanize
+      \:
+    = @user.sign_in_count
+    %br/
+    %b
+      = 'current_sign_in_at'.humanize
+      \:
+    = @user.current_sign_in_at
+    %br/
+    %b
+      = 'last_sign_in_at'.humanize
+      \:
+    = @user.last_sign_in_at
+    %br/
+    %b
+      = 'current_sign_in_ip'.humanize
+      \:
+    = @user.current_sign_in_ip
+    %br/
+    %b
+      = 'last_sign_in_ip'.humanize
+      \:
+    = @user.last_sign_in_ip
+    %br/
+    %b
+      = 'locked_at'.humanize
+      \:
+    = @user.locked_at
+    %br/
+    %b
+      = 'provider'.humanize
+      \:
+    = @user.provider
+    %br/
+    %b
+      = 'uid'.humanize
+      \:
+    = @user.uid
+    %br/
+    %b
+      = 'name'.humanize
+      \:
+    = @user.name
+    %br/
+    %b
+      = 'image'.humanize
+      \:
+    - if @user.image.present?
+      = image_tag @user.image, size: "50x50"
+    %br/
+    %b
+      = 'roles'.humanize
+      \:
+    = @user.active_roles.join(", ")
+  .card-footer
+    = link_to "All Users", users_path
